[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Autoload/AppLockWindow/AppLockWindow.gd" type="Script" id=1]

[node name="AppLockWindow" type="Node"]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "A singleton UI that appears when the application starts. For clients only.

<< Expand to see full detail >>

# Description
The client will be asked for the password before the game can be entered. The request password is generated daily and can be used to ask the game owner to generate an unlock code. The request code is unique to each client's device id and cannot be used for other purposes. This is a one-time process and will not be asked next time the application is launched.

# Remixing UI
You may re-arrange or modify the UI elements for your own game whether you wish. Some node's structure are fixed by the script and may need to be updated through the script.

# Copying AppLockWindow To Your Project
There are dependencies for this scene to function. Below are the files that may need to be copied too.
- res://Src/Autoload/AppLockWindow/AppLockWindow.tscn
- res://Src/Autoload/AppLockWindow/AppLockWindow.gd
- res://Src/Autoload/AppLockWindow/AppUnlockSaver.gd
- res://Src/Util/AppHashLock/AppHashLock.gd
After opening this scene in your own project, Godot will ask you to fix missing dependencies. Locate the file 'AppLockWindow.gd' and this scene will be able to open for editing.

# Applying For Use In Your Project
This scene is designed to work as a singleton. Simply add this scene to Autoload and the UI will show up at any time the game is launched.

# Remembering Verification State
Once the verification is done, this UI will free itself from the instance, allowing the client to play the game normally. The verification file will be saved in application data directory at \"user://AppUnlock/session.dat\" which is used to verify everytime the application starts. This file will work only for each client's device id and cannot be used to verify other devices' application, as doing so will not work.

# Improving Security
There is a variable that might need to be changed for increased security.
- In AppLockWindow.gd, a variable 'my_unique_id' is a password for your own application used to fetch request code and verify the unlock process."
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="BgRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.5
margin_right = 60.5
margin_bottom = 42.0
grow_horizontal = 2
rect_min_size = Vector2( 384, 0 )
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockTitleLabel" type="Label" parent="CanvasLayer/MarginContainer/Control/VBox"]
margin_right = 384.0
margin_bottom = 14.0
grow_horizontal = 2
text = "Application Locked"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockDescLabel" type="Label" parent="CanvasLayer/MarginContainer/Control/VBox"]
margin_top = 46.0
margin_right = 384.0
margin_bottom = 94.0
grow_horizontal = 2
text = "To gain access to this application, you need to ask the game owner for the code (presuming the owner allowed you to do so)."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AskCodeDescLabel" type="Label" parent="CanvasLayer/MarginContainer/Control/VBox"]
margin_top = 126.0
margin_right = 384.0
margin_bottom = 174.0
grow_horizontal = 2
text = "To begin, copy the code below and send it to the game owner. Once you have obtained the code from the game owner, enter the password below."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AskCodeHBox" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Control/VBox"]
margin_top = 206.0
margin_right = 384.0
margin_bottom = 220.0
custom_constants/separation = 16
alignment = 1

[node name="AskCodeLabel" type="Label" parent="CanvasLayer/MarginContainer/Control/VBox/AskCodeHBox"]
margin_left = 144.0
margin_right = 192.0
margin_bottom = 14.0
grow_horizontal = 2
text = "256714"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyLinkButton" type="LinkButton" parent="CanvasLayer/MarginContainer/Control/VBox/AskCodeHBox"]
margin_left = 208.0
margin_right = 239.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.470588, 0.470588, 1, 1 )
text = "Copy"

[node name="PasswordLineEdit" type="LineEdit" parent="CanvasLayer/MarginContainer/Control/VBox"]
margin_top = 252.0
margin_right = 384.0
margin_bottom = 276.0
placeholder_text = "Enter password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerifyButton" type="Button" parent="CanvasLayer/MarginContainer/Control/VBox"]
margin_left = 160.0
margin_top = 308.0
margin_right = 224.0
margin_bottom = 328.0
rect_min_size = Vector2( 64, 0 )
size_flags_horizontal = 4
text = "Unlock"

[node name="StatusLabel" type="Label" parent="CanvasLayer/MarginContainer/Control/VBox"]
visible = false
margin_top = 343.0
margin_right = 384.0
margin_bottom = 357.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 0.317647, 0.317647, 1 )
text = "Invalid password!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/MarginContainer/Control/VBox/AskCodeHBox/CopyLinkButton" to="." method="_on_CopyLinkButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Control/VBox/VerifyButton" to="." method="_on_VerifyButton_pressed"]
